--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     -->
     
     <!-- {/* HTML Meta Tags */} -->
-    <title>{TODO: insert website title here}</title>
+    <title>West LA Food</title>
     <meta
     name="description"
     content="<TODO: insert description text here>"
